--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tauri + React + TS</title>
   </head>
 
-  <body>
+  <body style="background-color: rgba(0 0 0 0);">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
