--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body style="background-color: rgba(0 0 0 0); ">
-    <div id="root"></div>
+    <div id="root" style="overflow: hidden;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
