--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Tauri + React + TS</title>
   </head>
 
-  <body style="background-color: rgba(0 0 0 0); ">
-    <div id="root" style="overflow: hidden;"></div>
+  <body>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
